2022-8-19 Login and logout

--- a/src/main/resources/templates/site/login.html
+++ b/src/main/resources/templates/site/login.html
@@ -63,12 +63,23 @@
 		<div class="main">
 			<div class="container pl-5 pr-5 pt-3 pb-3 mt-3 mb-3">
 				<h3 class="text-center text-info border-bottom pb-3">登&nbsp;&nbsp;录</h3>
-				<form class="mt-5">				
+				<!-- thymeleaf: form 表单，提交的方式 post， 提交的地址 /login -->
+				<form class="mt-5" method="post" th:action="@{/login}">
 					<div class="form-group row">
 						<label for="username" class="col-sm-2 col-form-label text-right">账号:</label>
 						<div class="col-sm-10">
-							<input type="text" class="form-control is-invalid" id="username" placeholder="请输入您的账号!" required>
-							<div class="invalid-feedback">
+							<!-- 这里添加 name 属性，让 thymeleaf 来管理和请求的时候后端的入参进行对应， id 实际是前端标识控件
+								1 刷新显示用户之前的输入 th:value = "${}"   ${}表示取变量值：
+									1、后端 controller 将其一个个手动添加到 model 中进行访问，
+									2、直接从 request 中获取，因为这是 连接还没关闭，可以直接从请求中获取，param.username 相当于后端
+								2 提示，th:text="${text}"  这里直接找到加入 model 中的 AttributeName 获取对应性的值
+								3 提示是否显示，则根据 model 中 AttributeName 是否为空，则需要在 class 中配置, div 是否显示取决前面的 input 的样式。
+									用单竖线动态拼接样式 th:class="|form-control ${usernameMsg==null?'':'is-invalid'}|" 若为空则不显示，否则显示
+							-->
+							<input type="text" th:class="|form-control ${usernameMsg==null?'':'is-invalid'}|"
+								   th:value="${param.username}"
+								   name="username" id="username" placeholder="请输入您的账号!" required>
+							<div class="invalid-feedback" th:text="${usernameMsg}">
 								该账号不存在!
 							</div>
 						</div>
@@ -76,8 +87,10 @@
 					<div class="form-group row mt-4">
 						<label for="password" class="col-sm-2 col-form-label text-right">密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control is-invalid" id="password" placeholder="请输入您的密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${passwordMsg==null?'':'is-invalid'}|"
+								   th:value="${param.password}"
+								   name="password" id="password" placeholder="请输入您的密码!" required>
+							<div class="invalid-feedback" th:text="${passwordMsg}">
 								密码长度不能小于8位!
 							</div>							
 						</div>
@@ -85,8 +98,9 @@
 					<div class="form-group row mt-4">
 						<label for="verifycode" class="col-sm-2 col-form-label text-right">验证码:</label>
 						<div class="col-sm-6">
-							<input type="text" class="form-control is-invalid" id="verifycode" placeholder="请输入验证码!">
-							<div class="invalid-feedback">
+							<input type="text" th:class="|form-control ${codeMsg==null?'':'is-invalid'}|"
+								   name="code" id="verifycode" placeholder="请输入验证码!">
+							<div class="invalid-feedback" th:text="${codeMsg}">
 								验证码不正确!
 							</div>
 						</div>
@@ -99,7 +113,9 @@
 					<div class="form-group row mt-4">
 						<div class="col-sm-2"></div>
 						<div class="col-sm-10">
-							<input type="checkbox" id="remember-me" checked="checked">
+							<input type="checkbox"
+								   name="rememberMe" id="remember-me"
+								   th:checked="${param.rememberMe}">
 							<label class="form-check-label" for="remember-me">记住我</label>
 							<a href="forget.html" class="text-danger float-right">忘记密码?</a>
 						</div>
