--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/global.css" />
-	<link rel="stylesheet" href="../css/login.css" />
+	<link rel="stylesheet" th:href="@{/css/global.css}" />
+	<link rel="stylesheet" th:href="@{/css/login.css}" />
 	<title>牛客网-账号设置</title>
 </head>
 <body>
 	<div class="nk-container">
 		<!-- 头部 -->
-		<header class="bg-dark sticky-top">
+		<header class="bg-dark sticky-top" th:replace="index::header">
 			<div class="container">
 				<!-- 导航 -->
 				<nav class="navbar navbar-expand-lg navbar-dark">
@@ -64,14 +64,23 @@
 			<div class="container p-5 mt-3 mb-3">
 				<!-- 上传头像 -->
 				<h6 class="text-left text-info border-bottom pb-2">上传头像</h6>
-				<form class="mt-5">
+				<!--1、配置表单请求方式：文件数据上传默认 post，
+					2、Spring 提供的方法 multipart
+					3、上传 Controller 请求路径 "@{/user/header}"
+					-->
+				<form class="mt-5" method="post" enctype="multipart/form-data" th:action="@{/user/upload}">
 					<div class="form-group row mt-4">
 						<label class="col-sm-2 col-form-label text-right">选择头像:</label>
 						<div class="col-sm-10">
 							<div class="custom-file">
-								<input type="file" class="custom-file-input" id="head-image" lang="es" required="">
+								<input type="file" th:class="|custom-file-input ${headerErrorMsg==null?'':'is-invalid'}|"
+									   name="headerImage" id="head-image" lang="es" required="">
+								<!--	加一行错误信息提示，只有有出错信息时才显示	-->
+								<div class="invalid-feedback" th:text="${headerErrorMsg}">
+									上传头像出错!
+								</div>
 								<label class="custom-file-label" for="head-image" data-browse="文件">选择一张图片</label>
-							</div>		
+							</div>
 						</div>
 					</div>
 					<div class="form-group row mt-4">
@@ -83,41 +92,44 @@
 				</form>
 				<!-- 修改密码 -->
 				<h6 class="text-left text-info border-bottom pb-2 mt-5">修改密码</h6>
-				<form class="mt-5">				
+				<form class="mt-5" method="post" th:action="@{/user/password}">
 					<div class="form-group row mt-4">
 						<label for="old-password" class="col-sm-2 col-form-label text-right">原密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="old-password" placeholder="请输入原始密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${oldPasswordMsg==null?'':'is-invalid'}|"
+								   th:value="${param.oldPassword}"
+								   name = "oldPassword" id="old-password" placeholder="请输入原始密码!" required>
+							<div class="invalid-feedback" th:text="${oldPasswordMsg}">
 								密码长度不能小于8位!
-							</div>							
+							</div>
 						</div>
 					</div>
 					<div class="form-group row mt-4">
 						<label for="new-password" class="col-sm-2 col-form-label text-right">新密码:</label>
 						<div class="col-sm-10">
-							<input type="password" class="form-control" id="new-password" placeholder="请输入新的密码!" required>
-							<div class="invalid-feedback">
+							<input type="password" th:class="|form-control ${newPasswordMsg==null?'':'is-invalid'}|"
+								   name = "newPassword" id="new-password" placeholder="请输入新的密码!" required>
+							<div class="invalid-feedback" th:text="${newPasswordMsg}">
 								密码长度不能小于8位!
-							</div>							
+							</div>
 						</div>
 					</div>
 					<div class="form-group row mt-4">
 						<label for="confirm-password" class="col-sm-2 col-form-label text-right">确认密码:</label>
 						<div class="col-sm-10">
 							<input type="password" class="form-control" id="confirm-password" placeholder="再次输入新密码!" required>
-							<div class="invalid-feedback">
+							<div class="invalid-feedback" id="error-password">
 								两次输入的密码不一致!
-							</div>								
+							</div>
 						</div>
-					</div>				
+					</div>
 					<div class="form-group row mt-4">
 						<div class="col-sm-2"></div>
 						<div class="col-sm-10 text-center">
-							<button type="submit" class="btn btn-info text-white form-control">立即保存</button>
+							<button type="submit" class="btn btn-info text-white form-control" onclick="return submitPassword()">立即保存</button>
 						</div>
 					</div>
-				</form>				
+				</form>
 			</div>
 		</div>
 
@@ -188,11 +200,32 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js" crossorigin="anonymous"></script>
-	<script src="../js/global.js"></script>
+	<script th:src="@{/js/global.js}"></script>
 	<script>
-		$(function(){
+		// $(function(){});页面DOM文档加载完成后加载执行的，等效于$(document).ready(function(){...});
+		// 优于window.onload，后者必须等到页面内包括图片的所有元素加载完毕后才能执行。
+		$(function () {
+			// bs-custom-file-input.js 下的方法
 			bsCustomFileInput.init();
 		});
-	</script>
+
+		// 提交事件
+		function submitPassword() {
+			// # 定位到控件 id
+			let $newPassword = $('#new-password');
+			let $confirmPassword = $('#confirm-password');
+			let newVal = $newPassword.val();
+			let confirmVal = $confirmPassword.val();
+			if (confirmVal !== newVal) {
+				$confirmPassword.removeClass()
+				$confirmPassword.addClass("form-control is-invalid");
+				return false;
+			} else {
+				$confirmPassword.removeClass()
+				$confirmPassword.addClass("form-control");
+				return true;
+			}
+		}
+    </script>
 </body>
 </html>
