--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
 							<li class="nav-item ml-3 btn-group-vertical">
 								<a class="nav-link" th:href="@{/index}">首页</a>	<!-- 这里使用thyme leaf来动态指定目标网页而不是惊天html -->
 							</li>
-							<!--	没登录不显示消息、用户头像等；登录不显示 注册、登录 -->
+							<!--	没登录不显示消息、用户头像等；登录不显示 注册、登录; th:if 只有为真的时候，才会显示当前元素和相关值 -->
 							<li class="nav-item ml-3 btn-group-vertical" th:if="${loginUser!=null}">
 								<a class="nav-link position-relative" href="site/letter.html">消息<span class="badge badge-danger">12</span></a>
 							</li>
@@ -74,7 +74,7 @@
 							<a class="nav-link" href="#">最热</a>
 						</li>
 					</ul>
-					<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal">我要发布</button>
+					<button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal" data-target="#publishModal" th:if="${loginUser!=null}">我要发布</button>
 				</div>
 				<!-- 弹出框 -->
 				<div class="modal fade" id="publishModal" tabindex="-1" role="dialog" aria-labelledby="publishModalLabel" aria-hidden="true">
@@ -160,8 +160,8 @@
 							<a class="page-link" th:href="@{${page.path}(current=1)}">首页</a>
 						</li>
 						<!-- 进行判定若在class里，需要将内容用 | 包起来，然后使用th语法，disabled 是否可点 -->
-						<li th:class="|page-item ${page.current==1?'disabled':''}|" >
-							<a th:class="page-link" th:href="@{${page.path}(current=${page.current-1})}">上一页</a>
+						<li th:class="|page-item ${page.current==1?'disabled':''}|">
+							<a th:class="page-link" th:href="@{${page.path}(current=${page.current -1})}">上一页</a>
 						</li>
 						<!-- 当前页高亮显示， 并且通过th方法生成一个序列 -->
 						<li th:class="|page-item ${i==page.current?'active':''}|" th:each="i:${#numbers.sequence(page.from,page.to)}">
