--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -134,7 +134,7 @@
 						<div class="media-body">
 							<h6 class="mt-0 mb-3">
 								<!-- 这里使用了u意思将字符串中的编码转换为过来 &lt; 等-->
-								<a href="#" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>
+								<a th:href="@{|/discuss/detail/${map.post.id}|}" th:utext="${map.post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</a>
 								<!-- th:if 进行判断，若成功则当前标签显示，否则不显示 -->
 								<span class="badge badge-secondary bg-primary" th:if="${map.post.type==1}">置顶</span>
 								<span class="badge badge-secondary bg-danger" th:if="${map.post.status==1}">精华</span>
