--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -83,9 +83,15 @@
 						<div class="text-muted mt-3">
 							发布于 <b th:text="${#dates.format(discussPost.createTime, 'yyyy-MM-dd HH-mm=ss')}">2019-04-15 15:32:18</b>
 							<ul class="d-inline float-right">
-								<li class="d-inline ml-2"><a href="#" class="text-primary">赞 11</a></li>
+								<!-- <li class="d-inline ml-2"><a href="#" class="text-primary">赞 11</a></li>-->
+								<!-- 这里表示，不把 a 标签当做超链接来看，而是作为一个按钮，点击执行 js 代码 -->
+								<li class="d-inline ml-2">
+									<a href="javascript:;" th:onclick="|discuss(this, 1,  ${discussPost.id});|" class="text-primary">
+										<!-- 赞 11-->
+										<b th:text="${likeStatus == 1 ? '已赞' : '赞'}">赞</b> <i th:text="${likeCount}">11</i>
+									</a></li>
 								<li class="d-inline ml-2">|</li>
-								<li class="d-inline ml-2"><a href="#replyform" class="text-primary">回帖 <i th:text="${discussPost.commentCount}">7</ith></a></li>
+								<li class="d-inline ml-2"><a href="#replyform" class="text-primary">回帖 <i th:text="${discussPost.commentCount}">7</i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -130,7 +136,10 @@
 							<div class="mt-4 text-muted font-size-12">
 								<span>发布于 <b th:text="${#dates.format(cvo.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
 								<ul class="d-inline float-right">
-									<li class="d-inline ml-2"><a href="#" class="text-primary">赞(1)</a></li>
+									<li class="d-inline ml-2">
+										<a href="javascript:;" th:onclick="|discuss(this, 2, ${cvo.comment.id});|" class="text-primary">
+											<b th:text="${cvo.likeStatus == 1 ? '已赞' : '赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
+										</a></li>
 									<li class="d-inline ml-2">|</li>
 									<li class="d-inline ml-2"><a href="#" class="text-primary">回复(<i th:text="${cvo.replyCount}">2</i>)</a></li>
 								</ul>
@@ -152,7 +161,11 @@
 									<div class="mt-3">
 										<span th:text="${#dates.format(rvo.reply.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
 										<ul class="d-inline float-right">
-											<li class="d-inline ml-2"><a href="#" class="text-primary">赞(1)</a></li>
+											<li class="d-inline ml-2">
+												<a href="javascript:;" th:onclick="|discuss(this, 2, ${rvo.reply.id});|" class="text-primary">
+													<!--<b>赞</b>(<i>1</i>)-->
+													<b th:text="${rvo.likeStatus == 1 ? '已赞' : '赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
+												</a></li>
 											<li class="d-inline ml-2">|</li>
 											<li class="d-inline ml-2"><a th:href="|#huifu-${rvoStat.count}|" data-toggle="collapse" class="text-primary">回复</a></li>
 										</ul>
@@ -289,5 +302,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script th:src="@{/js/global.js}"></script>
+	<script th:src="@{/js/discuss.js}"></script>
 </body>
 </html>
