--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
 									<img th:src="${loginUser.headerUrl}" class="rounded-circle" style="width:30px;">
 								</a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item text-center" href="site/profile.html">个人主页</a>
+									<a class="dropdown-item text-center" th:href="@{|/user/profile/${loginUser.id}|}">个人主页</a>
 									<a class="dropdown-item text-center" th:href="@{/user/setting}">账号设置</a>
 									<a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
 									<div class="dropdown-divider"></div>
@@ -126,7 +126,7 @@
 						 # 来引用Thymeleaf的工具-->
 					<!-- "th:" 表示使用Thymeleaf引擎来管理这个标签，each就是便利这块内容并设置一个map来接收当前内容 以li为模板遍历输出-->
 					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="map:${discussPosts}">
-						<a href="site/profile.html">
+						<a th:href="@{|/user/profile/${map.user.id}|}">
 							<!-- map里面有user和post两个对象，获取用户头像数据 -->
 							<!-- map.user.headerUrl:  相当于 map.get(user) -> 获得User对象 -> User.getHeaderUrl()  -->
 							<img th:src="${map.user.headerUrl}" class="mr-4 rounded-circle" alt="用户头像" style="width:50px;height:50px;">
