--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -75,7 +75,7 @@
 				</h6>
 				<!-- 作者 -->
 				<div class="media pb-3 border-bottom">
-					<a href="profile.html">
+					<a th:href="@{|/user/profile/${user.id}|}">
 						<img th:src="${user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像" >
 					</a>
 					<div class="media-body">
@@ -86,7 +86,7 @@
 								<!-- <li class="d-inline ml-2"><a href="#" class="text-primary">赞 11</a></li>-->
 								<!-- 这里表示，不把 a 标签当做超链接来看，而是作为一个按钮，点击执行 js 代码 -->
 								<li class="d-inline ml-2">
-									<a href="javascript:;" th:onclick="|discuss(this, 1,  ${discussPost.id});|" class="text-primary">
+									<a href="javascript:;" th:onclick="|like(this, 1,  ${discussPost.id}, ${discussPost.userId});|" class="text-primary">
 										<!-- 赞 11-->
 										<b th:text="${likeStatus == 1 ? '已赞' : '赞'}">赞</b> <i th:text="${likeCount}">11</i>
 									</a></li>
@@ -121,7 +121,7 @@
 				<ul class="list-unstyled mt-4">
 					<!-- 第1条回帖 -->
 					<li class="media pb-3 pt-3 mb-3 border-bottom" th:each="cvo:${comments}">
-						<a href="profile.html">
+						<a th:href="@{|/user/profile/${cvo.user.id}|}">
 							<img th:src="${cvo.user.headerUrl}" class="align-self-start mr-4 rounded-circle user-header" alt="用户头像" >
 						</a>
 						<div class="media-body">
@@ -137,7 +137,7 @@
 								<span>发布于 <b th:text="${#dates.format(cvo.comment.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">
-										<a href="javascript:;" th:onclick="|discuss(this, 2, ${cvo.comment.id});|" class="text-primary">
+										<a href="javascript:;" th:onclick="|like(this, 2, ${cvo.comment.id}, ${cvo.comment.userId});|" class="text-primary">
 											<b th:text="${cvo.likeStatus == 1 ? '已赞' : '赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
 										</a></li>
 									<li class="d-inline ml-2">|</li>
@@ -162,7 +162,7 @@
 										<span th:text="${#dates.format(rvo.reply.createTime, 'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
 										<ul class="d-inline float-right">
 											<li class="d-inline ml-2">
-												<a href="javascript:;" th:onclick="|discuss(this, 2, ${rvo.reply.id});|" class="text-primary">
+												<a href="javascript:;" th:onclick="|like(this, 2, ${rvo.reply.id}, ${rvo.reply.userId});|" class="text-primary">
 													<!--<b>赞</b>(<i>1</i>)-->
 													<b th:text="${rvo.likeStatus == 1 ? '已赞' : '赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
 												</a></li>
