--- a/src/main/resources/templates/site/profile.html
+++ b/src/main/resources/templates/site/profile.html
@@ -83,14 +83,16 @@
 							<span th:utext="${user.username}">nowcoder</span>
 							<!-- 使用一个隐藏控件，来存放关注对象的id 即目标用户 userId , 这里的 loginUser 是在拦截器中添加到modelAndView中的-->
 							<input type="hidden" id="entityId" th:value="${user.id}">
-							<button type="button" th:class="|btn ${hasFollowed?'btn-secondary':'btn-info'} btn-sm float-right mr-5 follow-btn|" th:if="${loginUser!=null&&loginUser.id!=user.id}" th:text="${hasFollowed?'已关注':'关注TA'}" >关注TA</button>
+							<button type="button" th:class="|btn ${hasFollowed?'btn-secondary':'btn-info'} btn-sm float-right mr-5 follow-btn|"
+									th:if="${loginUser!=null&&loginUser.id!=user.id}"
+									th:text="${hasFollowed?'取消关注':'关注TA'}" >关注TA</button>
 						</h5>
 						<div class="text-muted mt-3">
 							<span>注册于 <i class="text-muted" th:text="${#dates.format(user.createTime, 'yyyy-MM-dd HH:mm:ss')}">2015-06-12 15:20:12</i></span>
 						</div>
 						<div class="text-muted mt-3 mb-5">
-							<span>关注了 <a class="text-primary" href="followee.html" th:text="${followeeCount}">5</a> 人</span>
-							<span class="ml-4">关注者 <a class="text-primary" href="follower.html" th:text="${followerCount}">123</a> 人</span>
+							<span>关注了 <a class="text-primary" th:href="@{|/followees/${user.id}|}" th:text="${followeeCount}">5</a> 人</span>
+							<span class="ml-4">关注者 <a class="text-primary" th:href="@{|/followers/${user.id}|}" th:text="${followerCount}">123</a> 人</span>
 							<span class="ml-4">获得了 <i class="text-danger" th:text="${likeCount}">87</i> 个赞</span>
 						</div>
 					</div>
